tests/errors/papercut-cell-as-group.expect
---CODE---
1
---STDERR---
Error: 
9 |    save;
  |    ^^^^ Undefined group name: save
